<resources>
    <string name="app_name">WorkBus</string>
    <string name="action_settings">Settings</string>
    <string name="agraf_office">Agraf</string>
    <string name="to_label">to:</string>
    <string name="from_current_location_label">From current location</string>
    <string name="media_office">media</string>
    <string name="orion_office">orion</string>
    <string name="current_location_is_unknown">Current location is unknown</string>
    <string formatted="false" name="current_location_format_string">Current location is %.2f, %.2f</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
