<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:showIn="@layout/activity_main"
                tools:context="com.tomtom.work.workbus.MainActivityFragment">

    <TextView
            android:id="@+id/current_location_tv"
            android:text="@string/from_current_location_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
              android:text="@string/to_label" android:layout_below="@id/current_location_tv"
              android:id="@+id/label"
    />
    <Button android:layout_width="match_parent" android:layout_height="wrap_content"
            android:id="@+id/agraf_button" android:text="@string/agraf_office"
            android:layout_below="@id/label"
    />
    <Button android:layout_width="match_parent" android:layout_height="wrap_content"
            android:id="@+id/media_button" android:text="@string/media_office"
            android:layout_below="@id/agraf_button"
    />
    <Button android:layout_width="match_parent" android:layout_height="wrap_content"
            android:id="@+id/orion_button" android:text="@string/orion_office"
            android:layout_below="@id/media_button"
    />


</RelativeLayout>
